compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__cg_expr__arithmetic_operators_generate.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "fn get_int() -> i32;\nfn get_uint() -> u32;\n\nfn test() {\n    let sx = get_int();\n    let sy = get_int();\n    let ux = get_uint();\n    let uy = get_uint();\n\n    // TEST: should create an `add i32` instruction\n    let s_add = sx + sy;\n    let u_add = ux + uy;\n\n    // TEST: should create a `sub i32` instruction\n    let s_sub = sx - sy;\n    let u_sub = ux - uy;\n\n    // TEST: should create a `mul i32` instruction\n    let s_mul = sx * sy;\n    let u_mul = ux * uy;\n\n    // TEST: should create a `sdiv i32` instruction\n    let s_div = sx / sy;\n    // TEST: should create a `udiv i32` instruction\n    let u_div = ux / uy;\n\n    // TEST: should create a `srem i32` instruction\n    let s_rem = sx % sy;\n    // TEST: should create a `urem i32` instruction\n    let u_rem = ux % uy;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare i32 @get_int()

declare i32 @get_uint()

define {} @test() !dbg !3 {
entry:
  %let_u_rem = alloca i32, align 4
  %let_s_rem = alloca i32, align 4
  %let_u_div = alloca i32, align 4
  %let_s_div = alloca i32, align 4
  %let_u_mul = alloca i32, align 4
  %let_s_mul = alloca i32, align 4
  %let_u_sub = alloca i32, align 4
  %let_s_sub = alloca i32, align 4
  %let_u_add = alloca i32, align 4
  %let_s_add = alloca i32, align 4
  %let_uy = alloca i32, align 4
  %let_ux = alloca i32, align 4
  %let_sy = alloca i32, align 4
  %let_sx = alloca i32, align 4
  call void @llvm.dbg.declare(metadata ptr %let_sx, metadata !9, metadata !DIExpression()), !dbg !27
  %call = call i32 @get_int(), !dbg !28
  store i32 %call, ptr %let_sx, align 4, !dbg !27
  call void @llvm.dbg.declare(metadata ptr %let_sy, metadata !13, metadata !DIExpression()), !dbg !29
  %call1 = call i32 @get_int(), !dbg !30
  store i32 %call1, ptr %let_sy, align 4, !dbg !29
  call void @llvm.dbg.declare(metadata ptr %let_ux, metadata !14, metadata !DIExpression()), !dbg !31
  %call2 = call i32 @get_uint(), !dbg !32
  store i32 %call2, ptr %let_ux, align 4, !dbg !31
  call void @llvm.dbg.declare(metadata ptr %let_uy, metadata !16, metadata !DIExpression()), !dbg !33
  %call3 = call i32 @get_uint(), !dbg !34
  store i32 %call3, ptr %let_uy, align 4, !dbg !33
  call void @llvm.dbg.declare(metadata ptr %let_s_add, metadata !17, metadata !DIExpression()), !dbg !35
  %load = load i32, ptr %let_sx, align 4, !dbg !36
  %load4 = load i32, ptr %let_sy, align 4, !dbg !37
  %add = add i32 %load, %load4, !dbg !37
  store i32 %add, ptr %let_s_add, align 4, !dbg !35
  call void @llvm.dbg.declare(metadata ptr %let_u_add, metadata !18, metadata !DIExpression()), !dbg !38
  %load5 = load i32, ptr %let_ux, align 4, !dbg !39
  %load6 = load i32, ptr %let_uy, align 4, !dbg !40
  %add7 = add i32 %load5, %load6, !dbg !40
  store i32 %add7, ptr %let_u_add, align 4, !dbg !38
  call void @llvm.dbg.declare(metadata ptr %let_s_sub, metadata !19, metadata !DIExpression()), !dbg !41
  %load8 = load i32, ptr %let_sx, align 4, !dbg !42
  %load9 = load i32, ptr %let_sy, align 4, !dbg !43
  %sub = sub i32 %load8, %load9, !dbg !43
  store i32 %sub, ptr %let_s_sub, align 4, !dbg !41
  call void @llvm.dbg.declare(metadata ptr %let_u_sub, metadata !20, metadata !DIExpression()), !dbg !44
  %load10 = load i32, ptr %let_ux, align 4, !dbg !45
  %load11 = load i32, ptr %let_uy, align 4, !dbg !46
  %sub12 = sub i32 %load10, %load11, !dbg !46
  store i32 %sub12, ptr %let_u_sub, align 4, !dbg !44
  call void @llvm.dbg.declare(metadata ptr %let_s_mul, metadata !21, metadata !DIExpression()), !dbg !47
  %load13 = load i32, ptr %let_sx, align 4, !dbg !48
  %load14 = load i32, ptr %let_sy, align 4, !dbg !49
  %mul = mul i32 %load13, %load14, !dbg !49
  store i32 %mul, ptr %let_s_mul, align 4, !dbg !47
  call void @llvm.dbg.declare(metadata ptr %let_u_mul, metadata !22, metadata !DIExpression()), !dbg !50
  %load15 = load i32, ptr %let_ux, align 4, !dbg !51
  %load16 = load i32, ptr %let_uy, align 4, !dbg !52
  %mul17 = mul i32 %load15, %load16, !dbg !52
  store i32 %mul17, ptr %let_u_mul, align 4, !dbg !50
  call void @llvm.dbg.declare(metadata ptr %let_s_div, metadata !23, metadata !DIExpression()), !dbg !53
  %load18 = load i32, ptr %let_sx, align 4, !dbg !54
  %load19 = load i32, ptr %let_sy, align 4, !dbg !55
  %div = sdiv i32 %load18, %load19, !dbg !55
  store i32 %div, ptr %let_s_div, align 4, !dbg !53
  call void @llvm.dbg.declare(metadata ptr %let_u_div, metadata !24, metadata !DIExpression()), !dbg !56
  %load20 = load i32, ptr %let_ux, align 4, !dbg !57
  %load21 = load i32, ptr %let_uy, align 4, !dbg !58
  %div22 = udiv i32 %load20, %load21, !dbg !58
  store i32 %div22, ptr %let_u_div, align 4, !dbg !56
  call void @llvm.dbg.declare(metadata ptr %let_s_rem, metadata !25, metadata !DIExpression()), !dbg !59
  %load23 = load i32, ptr %let_sx, align 4, !dbg !60
  %load24 = load i32, ptr %let_sy, align 4, !dbg !61
  %rem = srem i32 %load23, %load24, !dbg !61
  store i32 %rem, ptr %let_s_rem, align 4, !dbg !59
  call void @llvm.dbg.declare(metadata ptr %let_u_rem, metadata !26, metadata !DIExpression()), !dbg !62
  %load25 = load i32, ptr %let_ux, align 4, !dbg !63
  %load26 = load i32, ptr %let_uy, align 4, !dbg !64
  %rem27 = urem i32 %load25, %load26, !dbg !64
  store i32 %rem27, ptr %let_u_rem, align 4, !dbg !62
  ret {} zeroinitializer, !dbg !65
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 4, type: !4, scopeLine: 4, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !{!9, !13, !14, !16, !17, !18, !19, !20, !21, !22, !23, !24, !25, !26}
!9 = !DILocalVariable(name: "sx", scope: !10, file: !2, line: 5, type: !12)
!10 = distinct !DILexicalBlock(scope: !11, file: !2, line: 4, column: 11)
!11 = distinct !DILexicalBlock(scope: !3, file: !2, line: 4, column: 11)
!12 = !DIBasicType(name: "i32")
!13 = !DILocalVariable(name: "sy", scope: !10, file: !2, line: 6, type: !12)
!14 = !DILocalVariable(name: "ux", scope: !10, file: !2, line: 7, type: !15)
!15 = !DIBasicType(name: "u32")
!16 = !DILocalVariable(name: "uy", scope: !10, file: !2, line: 8, type: !15)
!17 = !DILocalVariable(name: "s_add", scope: !10, file: !2, line: 11, type: !12)
!18 = !DILocalVariable(name: "u_add", scope: !10, file: !2, line: 12, type: !15)
!19 = !DILocalVariable(name: "s_sub", scope: !10, file: !2, line: 15, type: !12)
!20 = !DILocalVariable(name: "u_sub", scope: !10, file: !2, line: 16, type: !15)
!21 = !DILocalVariable(name: "s_mul", scope: !10, file: !2, line: 19, type: !12)
!22 = !DILocalVariable(name: "u_mul", scope: !10, file: !2, line: 20, type: !15)
!23 = !DILocalVariable(name: "s_div", scope: !10, file: !2, line: 23, type: !12)
!24 = !DILocalVariable(name: "u_div", scope: !10, file: !2, line: 25, type: !15)
!25 = !DILocalVariable(name: "s_rem", scope: !10, file: !2, line: 28, type: !12)
!26 = !DILocalVariable(name: "u_rem", scope: !10, file: !2, line: 30, type: !15)
!27 = !DILocation(line: 5, column: 9, scope: !10)
!28 = !DILocation(line: 5, column: 14, scope: !10)
!29 = !DILocation(line: 6, column: 9, scope: !10)
!30 = !DILocation(line: 6, column: 14, scope: !10)
!31 = !DILocation(line: 7, column: 9, scope: !10)
!32 = !DILocation(line: 7, column: 14, scope: !10)
!33 = !DILocation(line: 8, column: 9, scope: !10)
!34 = !DILocation(line: 8, column: 14, scope: !10)
!35 = !DILocation(line: 11, column: 9, scope: !10)
!36 = !DILocation(line: 11, column: 17, scope: !10)
!37 = !DILocation(line: 11, column: 22, scope: !10)
!38 = !DILocation(line: 12, column: 9, scope: !10)
!39 = !DILocation(line: 12, column: 17, scope: !10)
!40 = !DILocation(line: 12, column: 22, scope: !10)
!41 = !DILocation(line: 15, column: 9, scope: !10)
!42 = !DILocation(line: 15, column: 17, scope: !10)
!43 = !DILocation(line: 15, column: 22, scope: !10)
!44 = !DILocation(line: 16, column: 9, scope: !10)
!45 = !DILocation(line: 16, column: 17, scope: !10)
!46 = !DILocation(line: 16, column: 22, scope: !10)
!47 = !DILocation(line: 19, column: 9, scope: !10)
!48 = !DILocation(line: 19, column: 17, scope: !10)
!49 = !DILocation(line: 19, column: 22, scope: !10)
!50 = !DILocation(line: 20, column: 9, scope: !10)
!51 = !DILocation(line: 20, column: 17, scope: !10)
!52 = !DILocation(line: 20, column: 22, scope: !10)
!53 = !DILocation(line: 23, column: 9, scope: !10)
!54 = !DILocation(line: 23, column: 17, scope: !10)
!55 = !DILocation(line: 23, column: 22, scope: !10)
!56 = !DILocation(line: 25, column: 9, scope: !10)
!57 = !DILocation(line: 25, column: 17, scope: !10)
!58 = !DILocation(line: 25, column: 22, scope: !10)
!59 = !DILocation(line: 28, column: 9, scope: !10)
!60 = !DILocation(line: 28, column: 17, scope: !10)
!61 = !DILocation(line: 28, column: 22, scope: !10)
!62 = !DILocation(line: 30, column: 9, scope: !10)
!63 = !DILocation(line: 30, column: 17, scope: !10)
!64 = !DILocation(line: 30, column: 22, scope: !10)
!65 = !DILocation(line: 31, column: 1, scope: !10)
