compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__cg_expr__bitwise_operators_generate.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "fn get_int() -> i32;\nfn get_uint() -> u32;\n\nfn test() {\n    let x = get_int();\n    let y = get_int();\n    let u = get_uint();\n\n    // TEST: should create a `not i32` instruction\n    let not = ~x;\n\n    // TEST: should create a `and i32` instruction\n    let and = x & y;\n\n    // TEST: should create a `or i32` instruction\n    let or = x | y;\n\n    // TEST: should create a `xor i32` instruction\n    let xor = x ^ y;\n\n    // TEST: should create a `shl i32` instruction\n    let shl = x << u;\n\n    // TEST: should create a `lshr i32` instruction\n    let lshr = u >> u;\n\n    // TEST: should create a `ashr i32` instruction (as the lhs is signed)\n    let ashr = x >> u;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare i32 @get_int()

declare i32 @get_uint()

define {} @test() !dbg !3 {
entry:
  %let_ashr = alloca i32, align 4
  %let_lshr = alloca i32, align 4
  %let_shl = alloca i32, align 4
  %let_xor = alloca i32, align 4
  %let_or = alloca i32, align 4
  %let_and = alloca i32, align 4
  %let_not = alloca i32, align 4
  %let_u = alloca i32, align 4
  %let_y = alloca i32, align 4
  %let_x = alloca i32, align 4
  call void @llvm.dbg.declare(metadata ptr %let_x, metadata !9, metadata !DIExpression()), !dbg !23
  %call = call i32 @get_int(), !dbg !24
  store i32 %call, ptr %let_x, align 4, !dbg !23
  call void @llvm.dbg.declare(metadata ptr %let_y, metadata !13, metadata !DIExpression()), !dbg !25
  %call1 = call i32 @get_int(), !dbg !26
  store i32 %call1, ptr %let_y, align 4, !dbg !25
  call void @llvm.dbg.declare(metadata ptr %let_u, metadata !14, metadata !DIExpression()), !dbg !27
  %call2 = call i32 @get_uint(), !dbg !28
  store i32 %call2, ptr %let_u, align 4, !dbg !27
  call void @llvm.dbg.declare(metadata ptr %let_not, metadata !16, metadata !DIExpression()), !dbg !29
  %load = load i32, ptr %let_x, align 4, !dbg !30
  %not = xor i32 %load, -1, !dbg !30
  store i32 %not, ptr %let_not, align 4, !dbg !29
  call void @llvm.dbg.declare(metadata ptr %let_and, metadata !17, metadata !DIExpression()), !dbg !31
  %load3 = load i32, ptr %let_x, align 4, !dbg !32
  %load4 = load i32, ptr %let_y, align 4, !dbg !33
  %and = and i32 %load3, %load4, !dbg !33
  store i32 %and, ptr %let_and, align 4, !dbg !31
  call void @llvm.dbg.declare(metadata ptr %let_or, metadata !18, metadata !DIExpression()), !dbg !34
  %load5 = load i32, ptr %let_x, align 4, !dbg !35
  %load6 = load i32, ptr %let_y, align 4, !dbg !36
  %or = or i32 %load5, %load6, !dbg !36
  store i32 %or, ptr %let_or, align 4, !dbg !34
  call void @llvm.dbg.declare(metadata ptr %let_xor, metadata !19, metadata !DIExpression()), !dbg !37
  %load7 = load i32, ptr %let_x, align 4, !dbg !38
  %load8 = load i32, ptr %let_y, align 4, !dbg !39
  %xor = xor i32 %load7, %load8, !dbg !39
  store i32 %xor, ptr %let_xor, align 4, !dbg !37
  call void @llvm.dbg.declare(metadata ptr %let_shl, metadata !20, metadata !DIExpression()), !dbg !40
  %load9 = load i32, ptr %let_x, align 4, !dbg !41
  %load10 = load i32, ptr %let_u, align 4, !dbg !42
  %shl = shl i32 %load9, %load10, !dbg !42
  store i32 %shl, ptr %let_shl, align 4, !dbg !40
  call void @llvm.dbg.declare(metadata ptr %let_lshr, metadata !21, metadata !DIExpression()), !dbg !43
  %load11 = load i32, ptr %let_u, align 4, !dbg !44
  %load12 = load i32, ptr %let_u, align 4, !dbg !45
  %shr = lshr i32 %load11, %load12, !dbg !45
  store i32 %shr, ptr %let_lshr, align 4, !dbg !43
  call void @llvm.dbg.declare(metadata ptr %let_ashr, metadata !22, metadata !DIExpression()), !dbg !46
  %load13 = load i32, ptr %let_x, align 4, !dbg !47
  %load14 = load i32, ptr %let_u, align 4, !dbg !48
  %shr15 = ashr i32 %load13, %load14, !dbg !48
  store i32 %shr15, ptr %let_ashr, align 4, !dbg !46
  ret {} zeroinitializer, !dbg !49
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 4, type: !4, scopeLine: 4, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !{!9, !13, !14, !16, !17, !18, !19, !20, !21, !22}
!9 = !DILocalVariable(name: "x", scope: !10, file: !2, line: 5, type: !12)
!10 = distinct !DILexicalBlock(scope: !11, file: !2, line: 4, column: 11)
!11 = distinct !DILexicalBlock(scope: !3, file: !2, line: 4, column: 11)
!12 = !DIBasicType(name: "i32")
!13 = !DILocalVariable(name: "y", scope: !10, file: !2, line: 6, type: !12)
!14 = !DILocalVariable(name: "u", scope: !10, file: !2, line: 7, type: !15)
!15 = !DIBasicType(name: "u32")
!16 = !DILocalVariable(name: "not", scope: !10, file: !2, line: 10, type: !12)
!17 = !DILocalVariable(name: "and", scope: !10, file: !2, line: 13, type: !12)
!18 = !DILocalVariable(name: "or", scope: !10, file: !2, line: 16, type: !12)
!19 = !DILocalVariable(name: "xor", scope: !10, file: !2, line: 19, type: !12)
!20 = !DILocalVariable(name: "shl", scope: !10, file: !2, line: 22, type: !12)
!21 = !DILocalVariable(name: "lshr", scope: !10, file: !2, line: 25, type: !15)
!22 = !DILocalVariable(name: "ashr", scope: !10, file: !2, line: 28, type: !12)
!23 = !DILocation(line: 5, column: 9, scope: !10)
!24 = !DILocation(line: 5, column: 13, scope: !10)
!25 = !DILocation(line: 6, column: 9, scope: !10)
!26 = !DILocation(line: 6, column: 13, scope: !10)
!27 = !DILocation(line: 7, column: 9, scope: !10)
!28 = !DILocation(line: 7, column: 13, scope: !10)
!29 = !DILocation(line: 10, column: 9, scope: !10)
!30 = !DILocation(line: 10, column: 16, scope: !10)
!31 = !DILocation(line: 13, column: 9, scope: !10)
!32 = !DILocation(line: 13, column: 15, scope: !10)
!33 = !DILocation(line: 13, column: 19, scope: !10)
!34 = !DILocation(line: 16, column: 9, scope: !10)
!35 = !DILocation(line: 16, column: 14, scope: !10)
!36 = !DILocation(line: 16, column: 18, scope: !10)
!37 = !DILocation(line: 19, column: 9, scope: !10)
!38 = !DILocation(line: 19, column: 15, scope: !10)
!39 = !DILocation(line: 19, column: 19, scope: !10)
!40 = !DILocation(line: 22, column: 9, scope: !10)
!41 = !DILocation(line: 22, column: 15, scope: !10)
!42 = !DILocation(line: 22, column: 20, scope: !10)
!43 = !DILocation(line: 25, column: 9, scope: !10)
!44 = !DILocation(line: 25, column: 16, scope: !10)
!45 = !DILocation(line: 25, column: 21, scope: !10)
!46 = !DILocation(line: 28, column: 9, scope: !10)
!47 = !DILocation(line: 28, column: 16, scope: !10)
!48 = !DILocation(line: 28, column: 21, scope: !10)
!49 = !DILocation(line: 29, column: 1, scope: !10)
