compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__cg_expr__comma_yields_right_value.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "fn f();\nfn g() -> i32;\n\nfn test() -> i32 {\n    // TEST: f() is run, g() is run and used as the return value\n    return f(), g();\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare {} @f()

declare i32 @g()

define i32 @test() !dbg !3 {
entry:
  %call = call {} @f(), !dbg !8
  %call1 = call i32 @g(), !dbg !11
  ret i32 %call1, !dbg !11
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 4, type: !4, scopeLine: 4, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !7)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32")
!7 = !{}
!8 = !DILocation(line: 6, column: 12, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 4, column: 18)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 4, column: 18)
!11 = !DILocation(line: 6, column: 17, scope: !9)
