compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__cg_expr__pointer_arithmetic_generates_proper_gep.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "fn test() {\n    let x: *i32;\n\n    // TEST: should create a GEP that is the same as \"x[4]\"\n    let y = x + 4 as usize;\n    // TEST: and the same, with -4:\n    let z = x - 4 as usize;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define {} @test() !dbg !3 {
entry:
  %let_z = alloca ptr, align 8
  %let_y = alloca ptr, align 8
  %let_x = alloca ptr, align 8
  call void @llvm.dbg.declare(metadata ptr %let_x, metadata !9, metadata !DIExpression()), !dbg !16
  call void @llvm.dbg.declare(metadata ptr %let_y, metadata !14, metadata !DIExpression()), !dbg !17
  %load = load ptr, ptr %let_x, align 8, !dbg !18
  %ptr_add = getelementptr i32, ptr %load, i64 4, !dbg !19
  store ptr %ptr_add, ptr %let_y, align 8, !dbg !17
  call void @llvm.dbg.declare(metadata ptr %let_z, metadata !15, metadata !DIExpression()), !dbg !20
  %load1 = load ptr, ptr %let_x, align 8, !dbg !21
  %ptr_sub = getelementptr i32, ptr %load1, i64 -4, !dbg !22
  store ptr %ptr_sub, ptr %let_z, align 8, !dbg !20
  ret {} zeroinitializer, !dbg !23
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "(struct {  })", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !{!9, !14, !15}
!9 = !DILocalVariable(name: "x", scope: !10, file: !2, line: 2, type: !12)
!10 = distinct !DILexicalBlock(scope: !11, file: !2, line: 1, column: 11)
!11 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 11)
!12 = !DIDerivedType(tag: DW_TAG_pointer_type, name: "\22i32\22", baseType: !13, dwarfAddressSpace: 0)
!13 = !DIBasicType(name: "i32")
!14 = !DILocalVariable(name: "y", scope: !10, file: !2, line: 5, type: !12)
!15 = !DILocalVariable(name: "z", scope: !10, file: !2, line: 7, type: !12)
!16 = !DILocation(line: 2, column: 9, scope: !10)
!17 = !DILocation(line: 5, column: 9, scope: !10)
!18 = !DILocation(line: 5, column: 13, scope: !10)
!19 = !DILocation(line: 5, column: 17, scope: !10)
!20 = !DILocation(line: 7, column: 9, scope: !10)
!21 = !DILocation(line: 7, column: 13, scope: !10)
!22 = !DILocation(line: 7, column: 17, scope: !10)
!23 = !DILocation(line: 8, column: 1, scope: !10)
