compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__cg_expr__regression_119_special_integer_literals.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "fn test() {\n    let a = 0b10_10;\n    let b = 0x1F_A4;\n    return;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test'
source_filename = "test"

define void @test() {
entry:
  %let_b = alloca i32, align 4
  %let_a = alloca i32, align 4
  store i32 10, ptr %let_a, align 4
  store i32 8100, ptr %let_b, align 4
  ret void
}

